--- a/index.html
+++ b/index.html
@@ -124,18 +124,18 @@ Website design services, Website Design Company">
             <div class="collapse navbar-collapse " id="menu">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a href="index.html" target="_blank" class="nav-link current">Home</a>
+                  <a href="index" target="_blank" class="nav-link current">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html" target="_blank">About</a>
+                  <a class="nav-link" href="about" target="_blank">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
                     <div class="dropdown">
                         <a href="services.html" target="_blank" class="nav-link">Services</a>
                         <div class="dropdown-content">
-                            <a href="Web Design.html" target="_blank">Web Design</a>
-                            <a href="Search Engine Optimization.html" target="_blank">SEO Services</a>
+                            <a href="Web Design" target="_blank">Web Design</a>
+                            <a href="Search Engine Optimization" target="_blank">SEO Services</a>
                             <a href="Digital Marketing.html" target="_blank">Digital Marketing</a>
                         </div>
                     </div>
