--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Website design services, Website Design Company">
             <div class="collapse navbar-collapse " id="menu">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a href="index" target="_blank" class="nav-link current">Home</a>
+                  <a href="/" target="_blank" class="nav-link current">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about" target="_blank">About</a>
@@ -132,7 +132,7 @@ Website design services, Website Design Company">
 
                 <li class="nav-item dropdown">
                     <div class="dropdown">
-                        <a href="services.html" target="_blank" class="nav-link">Services</a>
+                        <a href="services" target="_blank" class="nav-link">Services</a>
                         <div class="dropdown-content">
                             <a href="Web Design" target="_blank">Web Design</a>
                             <a href="Search Engine Optimization" target="_blank">SEO Services</a>
