--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Website design services, Website Design Company">
     <header>
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html">Hilax <span>Media</span></a>
+            <a class="navbar-brand" href="/">Hilax <span>Media</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu"
              aria-controls="#menu" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-align-right text-light fa-5x"></i>
@@ -136,17 +136,17 @@ Website design services, Website Design Company">
                         <div class="dropdown-content">
                             <a href="Web Design" target="_blank">Web Design</a>
                             <a href="Search Engine Optimization" target="_blank">SEO Services</a>
-                            <a href="Digital Marketing.html" target="_blank">Digital Marketing</a>
+                            <a href="Digital Marketing" target="_blank">Digital Marketing</a>
                         </div>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="FAG.html" target="_blank">FAG</a>
+                    <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="Contact.html" target="_blank">Contact</a>
+                      <a class="nav-link" href="Contact" target="_blank">Contact</a>
                       <li class="nav-item">
-                          <a class="nav-link" href="Our Work.html" target="_blank">Our Works</a>
+                          <a class="nav-link" href="Our Work" target="_blank">Our Works</a>
                         </li>
                     </li>
               </ul>
@@ -211,7 +211,7 @@ Website design services, Website Design Company">
 
 </p>
 <a href="docx/website-design-questionnaire-template-pdf (3).docx" class="btn-1">Download</a>
-<a href="services.html" class="btn-1"> Get Started</a>
+<a href="services" class="btn-1"> Get Started</a>
 <div class="spacing"></div>
 </div>
 <div class="overlay"></div>
