--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Website design services, Website Design Company">
     <header>
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="/">Hilax <span>Media</span></a>
+            <a class="navbar-brand" href="https://hilaxmedia.com">Hilax <span>Media</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu"
              aria-controls="#menu" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-align-right text-light fa-5x"></i>
@@ -124,7 +124,7 @@ Website design services, Website Design Company">
             <div class="collapse navbar-collapse " id="menu">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a href="/" target="_blank" class="nav-link current">Home</a>
+                  <a href="https://hilaxmedia.com" target="_blank" class="nav-link current">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about" target="_blank">About</a>
