--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ Website design services, Website Design Company">
                     <div class="dropdown">
                         <a href="services" target="_blank" class="nav-link">Services</a>
                         <div class="dropdown-content">
-                            <a href="Web Design" target="_blank">Web Design</a>
-                            <a href="Search Engine Optimization" target="_blank">SEO Services</a>
-                            <a href="Digital Marketing" target="_blank">Digital Marketing</a>
+                            <a href="Web-Design" target="_blank">Web Design</a>
+                            <a href="Search-Engine-Optimization" target="_blank">SEO Services</a>
+                            <a href="Digital-Marketing" target="_blank">Digital Marketing</a>
                         </div>
                     </div>
                 </li>
@@ -146,7 +146,7 @@ Website design services, Website Design Company">
                   <li class="nav-item">
                       <a class="nav-link" href="Contact" target="_blank">Contact</a>
                       <li class="nav-item">
-                          <a class="nav-link" href="Our Work" target="_blank">Our Works</a>
+                          <a class="nav-link" href="Our-Work" target="_blank">Our Works</a>
                         </li>
                     </li>
               </ul>
@@ -220,13 +220,13 @@ Website design services, Website Design Company">
 
 <div class="row primary-banner">
   <div class="col-md-4">
-    <h2><a href="Web Design.html"target="_blank">Website Design</a></h2>
+    <h2><a href="Web-Design"target="_blank">Website Design</a></h2>
   </div>
   <div class="col-md-4">
-      <h2><a href="Digital Marketing.html"target="_blank">Digital Marketing Agency</a></h2>
+      <h2><a href="Digital-Marketing"target="_blank">Digital Marketing Agency</a></h2>
     </div>
     <div class="col-md-4">
-        <h2><a href="Search Engine Optimization.html"target="_blank">Seacrh Engine Optimization</a></h2>
+        <h2><a href="Search-Engine-Optimization"target="_blank">Seacrh Engine Optimization</a></h2>
       </div>
 </div>
 <div class="row section-1">
@@ -251,16 +251,16 @@ Website design services, Website Design Company">
 </div>
 <div class="row recent-work">
   <div class="col-md-6 wrk mb-4">
-      <a href="vega.html"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a>
+      <a href="vega"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a>
   </div>
   <div class="layer-txt">
-     <a href="vega.html" class="btn-1">View Work</a> <p></p>
+     <a href="vega" class="btn-1">View Work</a> <p></p>
     </div>
   <div class="col-md-6 wrk-1">
-      <a href="masterplus.html"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
+      <a href="masterplus"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
   </div>
   <div class="wrk-1-txt">
-      <a href="masterplus.html" class="btn-2">View Work</a> <p></p>
+      <a href="masterplus" class="btn-2">View Work</a> <p></p>
      </div>
      <div class="spacing"></div>
      
@@ -323,7 +323,7 @@ Website design services, Website Design Company">
         a superior <b><i>website design</i></b> in a timely manner, but also to ensure that every need of our customer
          is met or exceeded.</p>
       </div>
-      <a href="Web Design.html" class="btn-1"> Learn on Web Design </a>
+      <a href="Web-Design" class="btn-1"> Learn on Web Design </a>
   </div>
   <div class="col-md-4">
       <img src="img/Web Design In Ghana.png" alt="website design banner">
@@ -349,7 +349,7 @@ Website design services, Website Design Company">
             marketing and blow away your competition.</p>
            
       </div>
-      <a href="Digital Marketing.html" class="btn-1">Digital Marketing </a>
+      <a href="Digital-Marketing" class="btn-1">Digital Marketing </a>
   </div>
   <div class="col-md-4 noticed p-5">
     <img src="img/development-get-noticed.png" alt="digital marketing banner">
@@ -382,14 +382,14 @@ Website design services, Website Design Company">
     a boost when and where you need one, ensuring that
     your local and organic search engine optimization send the right web users to your sites.       
     </p>
-    <p>Keeping it fresh is the key to SEO <a href="Search Engine Optimization.html">(Search Engine Optimization). </a> In a scene where 
+    <p>Keeping it fresh is the key to SEO <a href="Search-Engine-Optimization">(Search Engine Optimization). </a> In a scene where 
       the lowest CPA is delivered through organic search. We deliver effective custom content marketing c
       ampaigns to increase traffic, revenue and deliver outstanding Return on Investment. Our Google analytical tools make 
       certain you’re getting your money’s worth.
      However, We avoid wasting time with website content that
      your prospects and the search engines hate.  
      Get the content and technical work on your website started today.</p>
-    <a href="Search Engine Optimization.html" class="btn-1">SEO Services</a>
+    <a href="Search-Engine-Optimization" class="btn-1">SEO Services</a>
 </div>
 
 <div class="col-md-6 section-4b text-wrap">
@@ -437,7 +437,7 @@ Website design services, Website Design Company">
        and develop a website design that amplifies your message, elevates your brand and drives your business forward.
         It’s not a cliché when we say that your success means everything to us. From start to finish,
          we will work to ensure the best outcomes for your organization’s goals. Contact us to get started today.</p>
-         <a href="#" class="btn-2">Say HI</a>    
+         <a href="Contact" class="btn-2">Say HI</a>    
     </div>  
   </div>
 
@@ -487,13 +487,13 @@ Website design services, Website Design Company">
        <h4>Agency</h4>
         <div class="line"></div>
        <ul>
-         <l1><a href="index.html" target="_blank">Home</a></l1>
-         <l1><a href="about.html"target="_blank">About</a></l1>
-         <l1><a href="services.html"target="_blank">Services</a></l1>
-         <l1><a href="blog.html"target="_blank">Blog</a></l1>
-         <l1><a href="FAG.html"target="_blank">FAG</a></l1>
-         <l1><a href="contact.html"target="_blank">Contact</a></l1>
-         <l1><a href="Our Work.html"target="_blank">Our Works</a></l1>
+         <l1><a href="https://hilaxmedia.com" target="_blank">Home</a></l1>
+         <l1><a href="about"target="_blank">About</a></l1>
+         <l1><a href="services"target="_blank">Services</a></l1>
+         <l1><a href="blog"target="_blank">Blog</a></l1>
+         <l1><a href="FAG"target="_blank">FAG</a></l1>
+         <l1><a href="contact"target="_blank">Contact</a></l1>
+         <l1><a href="Our-Work"target="_blank">Our Works</a></l1>
        </ul>
        <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
               <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
@@ -504,11 +504,11 @@ Website design services, Website Design Company">
          <h4>Services</h4>
           <div class="line"></div>
          <ul>
-           <l1><a href="Web Design.html" target="_blank">Web Design </a></l1>
-           <l1><a href="Web Design.html"target="_blank">CMS Development</a></l1>
-           <l1><a href="Web Design.html"target="_blank">eCommerce Web Design</a></l1>
-           <l1><a href="Search Engine Optimization.html"target="_blank">Search Engine Optimization</a></l1>
-           <l1><a href="Digital Marketing.html"target="_blank">Digital Marketing Services</a></l1>
+           <l1><a href="Web-Design" target="_blank">Web Design </a></l1>
+           <l1><a href="Web-Design"target="_blank">CMS Development</a></l1>
+           <l1><a href="Web-Design"target="_blank">eCommerce Web Design</a></l1>
+           <l1><a href="Search-Engine-Optimization"target="_blank">Search Engine Optimization</a></l1>
+           <l1><a href="Digital-Marketing"target="_blank">Digital Marketing Services</a></l1>
          </ul>
        </div>
        <div class="col-md-4">
@@ -543,7 +543,7 @@ Website design services, Website Design Company">
    </div>
   <div class="footer-section-2 mt-2">
     <h5>© 2019 Hilax Media Web Agency . <a href="#" target="_blank">Terms & Conditions</a> . All Rights Reserved.
-    </h5> | <a href="sitemap.html" target="_blank">Sitemap</a> |
+    </h5> | <a href="sitemap" target="_blank">Sitemap</a> |
   </div>
 </footer>
 </main>
