--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
     <header>
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html">Hilax <span>Media</span></a>
+            <a class="navbar-brand" href="https://hilaxmedia.com">Hilax <span>Media</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu"
              aria-controls="#menu" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-align-right text-light fa-5x"></i>
@@ -120,29 +120,29 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
             <div class="collapse navbar-collapse " id="menu">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a href="index.html" target="_blank" class="nav-link">Home</a>
+                  <a href="https://hilaxmedia.com" target="_blank" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html" target="_blank"class="nav-link current">About</a>
+                  <a class="nav-link" href="about" target="_blank"class="nav-link current">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <div class="dropdown">
-                        <a href="services.html" target="_blank" class="nav-link">Services</a>
+                        <a href="services" target="_blank" class="nav-link">Services</a>
                         <div class="dropdown-content">
-                            <a href="Web Design.html" target="_blank">Web Design</a>
-                            <a href="Search Engine Optimization.html" target="_blank">SEO Services</a>
-                            <a href="Digital Marketing.html" target="_blank">Digital Marketing</a>
+                            <a href="Web-Design" target="_blank">Web Design</a>
+                            <a href="Search-Engine-Optimization" target="_blank">SEO Services</a>
+                            <a href="Digital-Marketing" target="_blank">Digital Marketing</a>
                         </div>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="FAG.html" target="_blank">FAG</a>
+                    <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="Contact.html" target="_blank">Contact</a>
+                      <a class="nav-link" href="Contact" target="_blank">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Our Work.html" target="_blank">Our Works</a>
+                        <a class="nav-link" href="Our-Work" target="_blank">Our Works</a>
                       </li>
               </ul>
             </div>
@@ -207,7 +207,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
           with a great focus on website efficiency and visual appeal.</div>
           We launched Our Digital Designs with a goal
           To make your Customer's Journey seamless and hassle free</p>
-        <a href="services.html" class="btn-1">Services</a>
+        <a href="services" class="btn-1">Services</a>
         
     </div>
 
@@ -230,13 +230,13 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
 
     <div class="row primary-banner">
         <div class="col-md-4">
-          <h2><a href="Web Design.html"target="_blank">Website Design</a></h2>
+          <h2><a href="Web-Design"target="_blank">Website Design</a></h2>
         </div>
         <div class="col-md-4">
-            <h2><a href="Digital Marketing.html"target="_blank">Digital Marketing Agency</a></h2>
+            <h2><a href="Digital-Marketing"target="_blank">Digital Marketing Agency</a></h2>
           </div>
           <div class="col-md-4">
-              <h2><a href="Search Engine Optimization.html"target="_blank">Seacrh Engine Optimization</a></h2>
+              <h2><a href="Search-Engine-Optimization"target="_blank">Seacrh Engine Optimization</a></h2>
             </div>
       </div>
 <div class="row ab-section-2">
@@ -262,7 +262,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
         Get Started with You Dream Website Design<span> Today!</span>
     </h3>
     <p>Let's Talk About Your Next Website!</p>
-    <a href="Contact.html" class="btn-2">Check Us Out</a>
+    <a href="Contact" class="btn-2">Check Us Out</a>
   </div>
 
 <div class="row section-2">
@@ -323,7 +323,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
           </p>
           <!-- <img src="img/Benefit of Web Design With Hilax media.png" alt="Best Web Design Agency In Ghana"> -->
       </div>
-      <a href="services.html" class="btn-1">What We Do</a>
+      <a href="services" class="btn-1">What We Do</a>
   </div>
  
 </div>
@@ -334,7 +334,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
       Unveil the Innovative side of your Website with our <span> Web Designing Services</span>
      
   </h4>
-  <a href="FAG.html" class="btn-1">FAG</a>
+  <a href="FAG" class="btn-1">FAG</a>
 </div>
 
 
@@ -350,13 +350,13 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
        <h4>Agency</h4>
         <div class="line"></div>
        <ul>
-         <l1><a href="index.html" target="_blank">Home</a></l1>
-         <l1><a href="about.html"target="_blank">About</a></l1>
-         <l1><a href="services.html"target="_blank">Services</a></l1>
-         <l1><a href="blog.html"target="_blank">Blog</a></l1>
-         <l1><a href="FAG.html"target="_blank">FAG</a></l1>
-         <l1><a href="contact.html"target="_blank">Contact</a></l1>
-         <l1><a href="Our Work.html"target="_blank">Our Work</a></l1>
+         <l1><a href="https://hilaxmedia.com" target="_blank">Home</a></l1>
+         <l1><a href="about"target="_blank">About</a></l1>
+         <l1><a href="services"target="_blank">Services</a></l1>
+         <l1><a href="blog"target="_blank">Blog</a></l1>
+         <l1><a href="FAG"target="_blank">FAG</a></l1>
+         <l1><a href="contact"target="_blank">Contact</a></l1>
+         <l1><a href="Our-Work"target="_blank">Our Work</a></l1>
        </ul>
        <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
               <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
@@ -367,11 +367,11 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
          <h4>Services</h4>
           <div class="line"></div>
          <ul>
-           <l1><a href="Web Design.html" target="_blank">Web Design </a></l1>
-           <l1><a href="Web Design.html"target="_blank">CMS Development</a></l1>
-           <l1><a href="Web Design.html"target="_blank">eCommerce Web Design</a></l1>
-           <l1><a href="Search Engine Optimization.html"target="_blank">Search Engine Optimization</a></l1>
-           <l1><a href="Digital Marketing.html"target="_blank">Digital Marketing Services</a></l1>
+           <l1><a href="Web-Design" target="_blank">Web Design </a></l1>
+           <l1><a href="Web-Design"target="_blank">CMS Development</a></l1>
+           <l1><a href="Web-Design"target="_blank">eCommerce Web Design</a></l1>
+           <l1><a href="Search-Engine-Optimization"target="_blank">Search Engine Optimization</a></l1>
+           <l1><a href="Digital-Marketing"target="_blank">Digital Marketing Services</a></l1>
          </ul>
        </div>
        <div class="col-md-4">
@@ -406,7 +406,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
    </div>
   <div class="footer-section-2 mt-2">
     <h5>© 2019 Hilax Media Web Agency . <a href="#" target="_blank">Terms & Conditions</a> . All Rights Reserved.
-    </h5> | <a href="sitemap.html" target="_blank">Sitemap</a> |
+    </h5> | <a href="sitemap" target="_blank">Sitemap</a> |
   </div>
 </footer>
 </main>
