--- a/Digital-Marketing.html
+++ b/Digital-Marketing.html
@@ -127,8 +127,8 @@ Digital Marketing Services ,SEO Company, and email marketing
                   <a class="nav-link" href="about" target="_blank">About</a>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <div class="dropdown">
+                <li class="nav-item dropdown active">
+                    <div class="dropdown active">
                         <a href="services" target="_blank" class="nav-link">Services</a>
                         <div class="dropdown-content">
                             <a href="Web-Design" target="_blank">Web Design</a>
@@ -140,7 +140,7 @@ Digital Marketing Services ,SEO Company, and email marketing
                 <li class="nav-item">
                     <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a class="nav-link" href="Contact" target="_blank"class="nav-link current">Contact</a>
                     </li>
                     <li class="nav-item ">
