--- a/vega.html
+++ b/vega.html
@@ -147,11 +147,11 @@ Website Development, E-Commerce. Call Us: +233570816171.">
     </div>
   </div>
    
-  <div class="row vega-page">
+<!--   <div class="row vega-page">
       <div class="col-md-12 mt-5">
          <img src="img/portfolio/vega gym.png" alt="">
       </div>
-    </div>
+    </div> -->
 <div class="row vega-page">
   <div class="col-md-12">
      <img src="img/portfolio/vegagym.epizy_.com_imac right.png" alt="">
