--- a/Our-Work.html
+++ b/Our-Work.html
@@ -160,6 +160,17 @@ Website Development, E-Commerce. Call Us: +233570816171.">
         </div>
  </div>
 
+ <div class="our-work">
+   <div class="row recent-work">
+     <div class="col md-6">
+        <h2 class="mb-5 mt-5"><a href="assurance-consults">Assurance Consults</a></h2>
+              <a href="assurance-consults" class="btn-1">View Work</a> <p></p><br>
+              <a href="assurance-consults"><img src="img/portfolio/2019-11-06-18-58-quanticalabs.com_imac2013_left.png"></a>
+     </div>
+
+   </div>
+ </div>
+
 
 
  <footer>
