--- a/assurance-consults.html
+++ b/assurance-consults.html
@@ -69,7 +69,7 @@ Website Development, E-Commerce. Call Us: +233570816171.">
     <!-- End Google Tag Manager -->
 </head>
 
-<body class="vega">
+<body class="consult">
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJZZVKF"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -142,30 +142,42 @@ Website Development, E-Commerce. Call Us: +233570816171.">
 <main>
   <div class="row">
     <div class="col-md-12 low bg-dark p-5">
-        <h2>Vega Gym And Fittness</h2>
+        <h2>Assurance Consults</h2>
         <h1>Responsive and Mobile Friendly Design</h1>
     </div>
   </div>
    
-  <div class="row vega-page">
+  <div class="row consult-page">
       <div class="col-md-12 mt-5">
-         <img src="img/portfolio/vega gym.png" alt="">
+         <img src="img/portfolio/2019-11-06-18-57-quanticalabs.com.png" alt="">
       </div>
     </div>
-<div class="row vega-page">
+<div class="row consult-page">
   <div class="col-md-12">
-     <img src="img/portfolio/vegagym.epizy_.com_imac right.png" alt="">
+     <img src="img/portfolio/2019-11-06-18-58-quanticalabs.com.png" alt="">
   </div>
 </div>
-<div class="row vega-page">
+<div class="row consult-page">
     <div class="col-md-12">
-        <img src="img/portfolio/vegagym.epizy_.com imac left.png" alt="">
+        <img src="img/portfolio/2019-11-06-18-58-quanticalabs.com_imac2013_left.png" alt="">
      </div>
 </div>
-
 </div>
-
- 
+<div class="row consult-page">
+    <div class="col-md-12 mt-5">
+       <img src="img/portfolio/2019-11-06-18-58-quanticalabs.com_imac2013_right.png" alt="">
+    </div>
+  </div>
+  <div class="row consult-page">
+      <div class="col-md-12 mt-5">
+         <!-- <img src="img/portfolio/vega gym 3.png" alt=""> -->
+      </div>
+    </div>
+    <div class="row consult-page">
+        <div class="col-md-12 mt-5">
+           <!-- <img src="img/portfolio/vega gym.png" alt=""> -->
+        </div>
+      </div>
 
  
       <footer>
