--- a/index.html
+++ b/index.html
@@ -247,22 +247,30 @@ Website design services, Website Design Company">
   <div class="col-md-12">
       <h2 class="text-center">Recent <span>Work</span></h2>
       <div class="line-1 mb-4"></div>
+      <a href="Our-Work" class="btn-1">View Work</a> 
   </div>
 </div>
 <div class="row recent-work">
-  <div class="col-md-6 wrk mb-4">
+  <div class="col-md-3 wrk mb-4">
       <a href="vega"><img src="img/portfolio/vegagym.epizy_.com_imac right.png" ></a>
   </div>
-  <div class="layer-txt">
+  <!-- <div class="layer-txt">
      <a href="vega" class="btn-1">View Work</a> <p></p>
-    </div>
-  <div class="col-md-6 wrk-1">
+    </div> -->
+  <div class="col-md-3">
       <a href="masterplus"><img src="img/portfolio/masterpluscleaning. imac left.png"></a>
   </div>
-  <div class="wrk-1-txt">
+  <!-- <div class="wrk-1-txt">
       <a href="masterplus" class="btn-2">View Work</a> <p></p>
-     </div>
+     </div> -->
      <div class="spacing"></div>
+     <div class="col-md-3 wrk-1">
+        <a href="assurance-consults"><img src="img/portfolio/2019-11-06-18-58-quanticalabs.com_imac2013_right.png"></a>
+    </div>
+    <!-- <div class="wrk-1-txt">
+        <a href="masterplus" class="btn-2">View Work</a> <p></p>
+       </div> -->
+       <div class="spacing"></div>
      
 </div>
 <div class="row section-2">
