--- a/Search-Engine-Optimization.html
+++ b/Search-Engine-Optimization.html
@@ -45,7 +45,6 @@
 in Accra, offering SEO Consultant Services in Takoradi Ghana.">
 <meta name="keywords" content="SEO, SEO company, SEO services, SEO consultant, 
 SEO firms, SEO DC, SEO Accra Search Engine Optimization">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="SEO Company in Accra Ghana | SEO Consultant Services Ghana" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta property="og:description" content="Hilax Media is leading Search Engine Optimization (SEO) Company
@@ -59,6 +58,15 @@ in Accra, offering SEO Consultant Services in Takoradi Ghana. Call Us: +23357081
 
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
 <meta property="og:url" content="https://www.hilaxmedia.com/Search Engine Optimization.html"/>
+<!-- twitter  -->
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="SEO Company in Accra Ghana | SEO Consultant Services Ghana" />
+<meta name="twitter:description" content="Hilax Media is leading Search Engine Optimization (SEO) Company
+in Accra, offering SEO Consultant Services in Takoradi Ghana. Call Us: +233570816171." />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com/Search Engine Optimization.html"/>
+<!-- twitter  -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
@@ -324,22 +332,7 @@ in Accra, offering SEO Consultant Services in Takoradi Ghana. Call Us: +23357081
  
            </ul>
          </div>
-         <!-- <div class="col-md-3">
-             <h4>Reach us</h4>
-              <div class="line"></div>
-              <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
-              <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="https://www.linkedin.com/in/hilaxmedia/"target="_blank" > <i class="fab fa-linkedin-in fa-2x"></i></a>
-              <a href="#"target="_blank" target="_blank" ><i class="fab fa-whatsapp fa-2x"></i></a>
-              <div class="reach">
-              <h4>Contact </h4>
-              <div class="contact">
-             <a href="Tel:0570816171">0570816171</a> <a href="Tel:0248029408"> / 0248029408</a><br>
-             <a href="mailto:hilaxmedia.com@gmail.com" target="_blank">hilaxmedia.com@gmail.com</a> 
-             </div>
-             </div>
-             
-         </div>    -->
+        
    </div>
   <div class="footer-section-2 mt-2">
     <h5>© 2019 Hilax Media Web Agency . <a href="#" target="_blank">Terms & Conditions</a> . All Rights Reserved.
