--- a/Web-Design.html
+++ b/Web-Design.html
@@ -56,6 +56,18 @@ Get professional Website design at affordable prices.Professional Web Design">
 <meta property="og:phone_number" content="+233570816171" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
 <meta property="og:url" content="https://www.hilaxmedia.com/Web Design.html"/>
+
+<!-- twitter  -->
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Web Design| Hilax Media Website Development & Digital Marketing In Ghana|
+Leading Website Designers" />
+<meta name="twitter:description" content="Website development Experts | Professional Website Designers in Ghana - 
+Get professional Website design at affordable prices.Professional Web Design" />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com/Web Design.html"/>
+<!-- twitter  -->
+
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
@@ -63,7 +75,7 @@ Get professional Website design at affordable prices.Professional Web Design">
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Website Development | Website Designers in Ghana | Hilax Media</title>
+<title>Website Development | Website Designers in Ghana</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
