--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html encoding="UTF-8" dir="ltr" lang="en-US" language="English" 
 prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
@@ -47,7 +48,6 @@ prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
 Website Development, E-Commerce. Call Us: +233570816171.">
 <meta name="keywords" content="Website design, web design , website ,
 Website design services, Website Design Company">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Home| Hilax Media Website Development & Digital Marketing In Ghana|
  Leading Website Designers"/>
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -60,6 +60,14 @@ Website design services, Website Design Company">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
 <meta property="og:url" content="https://www.hilaxmedia.com/index.html" />
+<!-- twitter  -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Website Design | Web Design Company in Ghana | Hilax Media" />
+<meta name="twitter:description" content="Best Leading Web Design Company in Ghana - Experts in Website design,
+Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +233570816171. " />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com"/>
+<!-- twitter  -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
