--- a/services.html
+++ b/services.html
@@ -39,7 +39,6 @@ web design company in Accra, focused in professional web design services at affo
 web design company in Takoradi, Greater Accra web design company,
  professional web design company, web design services, website design services,
   cheap price">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta property="og:title" content="Services |Accra Web Design Company, Ecommerce, Web Development & Marketing Services" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
@@ -61,6 +60,15 @@ web design company in Accra, focused in professional web design services at affo
 <meta name="og:region" content="Western"/>
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
+<!-- twitter  -->
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Services |Accra Web Design Company, Ecommerce, Web Development & Marketing Services" />
+<meta name="twitter:description" content="Website Design Services. We are a professional 
+web design company in Accra, focused in professional web design services at affordable prices." />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com/services.html"/>
+<!-- twitter  -->
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
@@ -68,7 +76,7 @@ web design company in Accra, focused in professional web design services at affo
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title> Web Design Agency in Ghana |Leading Website Design Company | Hilax Media</title>
+<title>Accra Web Design Company, Ecommerce, & Marketing Services</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
