--- a/sitemap.html
+++ b/sitemap.html
@@ -41,23 +41,33 @@
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
 <meta property="og:type" content="website" />
-<meta name="description" content="Website design Experts | Best Leading Web Design Company in Ghana - 
+<meta name="description" content="Sitemap | Best Leading Web Design Company in Ghana - 
 Website Development, E-Commerce. Call Us: +233570816171.">
 <meta name="keywords" content="Website design, web design , website ,
 Website design services, Website Design Company">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Home| Hilax Media Website Development & Digital Marketing In Ghana|
+<meta property="og:title" content="Sitemap| Hilax Media Web & Digital Marketing In Ghana|
  Leading Website Designers"/>
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="geo.region" content="GH-WP" />
 <meta name="geo.placename" content="Takoradi" />
 <meta name="geo.position" content="4.887401;-1.751932" />
 <meta name="ICBM" content="4.887401, -1.751932" />
-<meta property="og:description" content="Best Leading Web Design Company in Ghana - Experts in Website design,
- Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +233570816171. ">
+<meta property="og:description" content=" Experts in Website design,
+ Web Development, E-Commerce, SEO and Digital Marketing Services.  ">
 <meta property="og:site_name" content="Hilax Media | Web Design and Website Design Company in Ghana" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
-<meta property="og:url" content="https://www.hilaxmedia.com/index.html" />
+<meta property="og:url" content="https://www.hilaxmedia.com/sitemap.html" />
+<!-- twitter  -->
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Sitemap| Hilax Media Web & Digital Marketing In Ghana|
+Leading Website Designers" />
+<meta name="twitter:description" content="Sitemap | Best Leading Web Design Company in Ghana - 
+Website Development, E-Commerce. Call Us: +233570816171." />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com/sitmap.html"/>
+<!-- twitter  -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
