--- a/Digital-Marketing.html
+++ b/Digital-Marketing.html
@@ -45,7 +45,6 @@
 Digital Marketing Services ,SEO Company, and email marketing 
  Call Us: +233570816171.">
 <meta name="keywords" content="Digital marketing services, SEO Company, PPC Services, Email Marketing">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta property="og:description" content="Digital Marketing Services ,| Professional 
 Digital Marketing Services ,SEO Company, and email marketing 
@@ -58,6 +57,16 @@ Digital Marketing Services ,SEO Company, and email marketing
 <meta name="ICBM" content="4.887401, -1.751932" />
 <meta property="og:url" content="https://www.hilaxmedia.com/Digital Marketing.html" />
 <meta name="google-site-verification" content="FkV6o7Z6zQSc1JeRZNeuCexFeE8ldNfehs06nF5s9hA"/>
+<!-- twitter  -->
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Digital Marketing Services Company | Online Marketing| Hilax Media" />
+<meta name="twitter:description" content="Digital Marketing Services ,| Professional 
+Digital Marketing Services ,SEO Company, and email marketing 
+ Call Us: +233570816171." />
+<meta name="twitter:site" content="https://www.hilaxmedia.com"/>
+<meta name="twitter:url" content="https://www.hilaxmedia.com/Digital Marketing.html"/>
+<!-- twitter  -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon (1).ico">
 <link rel="stylesheet" href="css/style.css">
@@ -65,7 +74,7 @@ Digital Marketing Services ,SEO Company, and email marketing
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Digital Marketing Services Company | Result Oriented Online Marketing| Hilax Media</title>
+<title>Digital Marketing Services Company | Online Marketing|</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
@@ -337,22 +346,7 @@ Digital Marketing Services ,SEO Company, and email marketing
  
            </ul>
          </div>
-         <!-- <div class="col-md-3">
-             <h4>Reach us</h4>
-              <div class="line"></div>
-              <a href="https://web.facebook.com/hilaxmedia"target="_blank" ><i class="fab fa-facebook-f fa-2x"></i></a>
-              <a href="https://twitter.com/HilaxMedia"target="_blank" ><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="https://www.linkedin.com/in/hilaxmedia/"target="_blank" > <i class="fab fa-linkedin-in fa-2x"></i></a>
-              <a href="#"target="_blank" target="_blank" ><i class="fab fa-whatsapp fa-2x"></i></a>
-              <div class="reach">
-              <h4>Contact </h4>
-              <div class="contact">
-             <a href="Tel:0570816171">0570816171</a> <a href="Tel:0248029408"> / 0248029408</a><br>
-             <a href="mailto:hilaxmedia.com@gmail.com" target="_blank">hilaxmedia.com@gmail.com</a> 
-             </div>
-             </div>
-             
-         </div>    -->
+      
    </div>
   <div class="footer-section-2 mt-2">
     <h5>© 2019 Hilax Media Web Agency . <a href="#" target="_blank">Terms & Conditions</a> . All Rights Reserved.
