--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
 <link rel="stylesheet" href="css/animate.min.css">
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title> Web Design Agency in Ghana |Leading Website Design Company | Hilax Media</title>
+<title> Web Design Agency in Ghana |Leading Website Design Company</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
