--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ prefix="og: http://ogp.me/ns#" itemtype="http://schema.org/WebPage">
 <meta name="copyright"content="Hilax Media">
 <meta name="language" content="ES">
 <meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
-<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media logo.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-logo.png"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media banner.png"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media brand.png"/>
 <meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media.png"/>
