--- a/FAG.html
+++ b/FAG.html
@@ -28,10 +28,11 @@
 <meta name="copyright"content="Hilax Media">
 <meta name="language" content="ES">
 <meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media logo.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media banner.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media brand.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-logo.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-banner.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-brand.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media.png"/>
+ <meta property="fb:app_id" content="427290314591766" />
 <meta property="og:type" content="Frequently Asked Questions of Website Design,| Professional 
 Digital Marketing Services Call Us: +233570816171." />
 <meta name="description" content="Frequently Asked Questions of Website Design,| Professional 
