--- a/about.html
+++ b/about.html
@@ -35,10 +35,11 @@
 <meta name="og:region" content="Western"/>
 <meta name="og:postal-code" content="657 Takoradi, Western Region"/>
 <meta name="og:country-name" content="Ghana"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media logo.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media banner.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media brand.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-logo.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-banner.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-brand.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media.png"/>
+ <meta property="fb:app_id" content="427290314591766" />
 <meta property="og:phone_number" content="+233570816171" />
 <meta property="og:type" content="website" />
 <meta name="description" content="Web Design Agency in Ghana | Website Design and Web development and Online 
