--- a/services.html
+++ b/services.html
@@ -28,10 +28,11 @@
 <meta name="copyright"content="Hilax Media">
 <meta name="language" content="ES">
 <meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media logo.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media banner.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media brand.png"/>
-<meta name="og:image" content="https://hilaxmedia.com/img/logo/Hilax Media.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-logo.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-banner.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media-brand.png"/>
+<meta property="og:image" content="https://hilaxmedia.com/img/logo/Hilax-Media.png"/>
+ <meta property="fb:app_id" content="427290314591766" />
 <meta name="description" content="Website Design Services. We are a professional 
 web design company in Accra, focused in professional web design services at affordable prices.
  "/>
