--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
   <div class="col-md-12">
     <div class="section-txt text-wrap">
         <h2>Bringing New Leads to <span>Brands online</span></h2>
-        <p>Hilax is the premier<stron>web design company</stron> </i></b> in the <b><i> Ghana Website Design </i></b> &
+        <p>Hilax is the premier<strong> web design company </strong> </i></b> in the <b><i> Ghana Website Design </i></b> &
             Digital Marketing scene. We have the needed experience to take your online brand to the next
              level. We offer a broad range of Web design &
           Digital Marketing Services for all  Business and Individuals.</p>
