--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WJZZVKF');</script>
     <!-- End Google Tag Manager -->
+ 
+ 
+ <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5dce59113cb65c00190122e1&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body>
