--- a/Contact.html
+++ b/Contact.html
@@ -114,6 +114,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
                   <li class="nav-item active">
                       <a class="nav-link" href="Contact" target="_blank"class="nav-link current">Contact</a>
                     </li>
