--- a/Digital-Marketing.html
+++ b/Digital-Marketing.html
@@ -150,6 +150,9 @@ Digital Marketing Services ,SEO Company, and email marketing
                 <li class="nav-item">
                     <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
                   <li class="nav-item">
                       <a class="nav-link" href="Contact" target="_blank"class="nav-link current">Contact</a>
                     </li>
