--- a/FAG.html
+++ b/FAG.html
@@ -109,6 +109,9 @@ E-Commerce, SEO and Branding. Call Us: +233570816171. ">
               <li class="nav-item active">
                   <a class="nav-link" href="FAG" target="_blank">FAG</a>
                 </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact" target="_blank"class="nav-link current">Contact</a>
                   </li>
