--- a/Search-Engine-Optimization.html
+++ b/Search-Engine-Optimization.html
@@ -150,6 +150,9 @@ in Accra, offering SEO Consultant Services in Takoradi Ghana. Call Us: +23357081
             <li class="nav-item">
                 <a class="nav-link" href="FAG" target="_blank">FAG</a>
               </li>
+            <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
               <li class="nav-item">
                   <a class="nav-link" href="Contact" target="_blank">Contact</a>
                   <li class="nav-item">
