--- a/Web-Design.html
+++ b/Web-Design.html
@@ -150,6 +150,9 @@ Get professional Website design at affordable prices.Professional Web Design" />
             <li class="nav-item">
                 <a class="nav-link" href="FAG" target="_blank">FAG</a>
               </li>
+            <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
               <li class="nav-item">
                   <a class="nav-link" href="Contact" target="_blank">Contact</a>
                   <li class="nav-item">
