--- a/about.html
+++ b/about.html
@@ -148,6 +148,10 @@ Marketing.  Ghana Web Design Company | We offer Afforadble Design in Ghana">
                 <li class="nav-item">
                     <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
+               
+                <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
                   <li class="nav-item">
                       <a class="nav-link" href="Contact" target="_blank">Contact</a>
                     </li>
