--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@ Web Development, E-Commerce, SEO and Digital Marketing Services. Call Us: +23357
                 <li class="nav-item">
                     <a class="nav-link" href="FAG" target="_blank">FAG</a>
                   </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
                   <li class="nav-item">
                       <a class="nav-link" href="Contact" target="_blank">Contact</a>
                       <li class="nav-item">
