--- a/services.html
+++ b/services.html
@@ -152,6 +152,9 @@ web design company in Accra, focused in professional web design services at affo
             <li class="nav-item">
                 <a class="nav-link" href="FAG" target="_blank">FAG</a>
               </li>
+            <li class="nav-item">
+                  <a class="nav-link" href="blog" target="_blank">Blog</a>
+                </li>
               <li class="nav-item">
                   <a class="nav-link" href="Contact" target="_blank">Contact</a>
                   <li class="nav-item">
