--- a/10-Hacks-to-Build-A-Good-Website-Design.html
+++ b/10-Hacks-to-Build-A-Good-Website-Design.html
@@ -405,9 +405,9 @@ and fulfils its expected functionality enhances the great user experience " />
   
             <div data-netlify-recaptcha="true"></div>
   
-          <div class="action">
-            <input type="submit" value="Send Message"  class="btn-1 fas fa-arrow-right">
-          </div>
+                <p>
+              <button type="submit" class="btn-1">Send</button>
+            </p>
           </div>   
       </div>
       </form>
