--- a/10-Hacks-to-Build-A-Good-Website-Design.html
+++ b/10-Hacks-to-Build-A-Good-Website-Design.html
@@ -403,7 +403,7 @@ and fulfils its expected functionality enhances the great user experience " />
             <textarea name="message" id="message"  class="form-control p-2 mb-3" cols="20" rows="10" placeholder="Message"></textarea>
             </div>
   
-            <div data-netlify-recaptcha="true"></div>
+<!--             <div data-netlify-recaptcha="true"></div> -->
   
                 <p>
               <button type="submit" class="btn-1">Send</button>
