--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@ Get professional Website design at affordable prices.Professional Web Design">
 lunk
 <script src="https://kit.fontawesome.com/a288ffdf5a.js"></script>
 <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-<title>Website Development | Website Designers in Ghana | Hilax Media</title>
+<title>Blog| Website Designers in Ghana</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151028911-1"></script>
 <script>
